# maya-py

./: .gitignore  CMakeLists.txt  PRODUCTION_ROADMAP.md  README.md  mkdocs.yml  myapp.py  pyproject.toml
.github/workflows/: ci.yml  docs.yml  wheels.yml
docs/: api-reference.md  apps.md  concepts.md  distribution.md  getting-started.md  index.md  layout.md  low-level.md  performance.md  program.md  rendering.md  text-and-style.md  widgets.md
examples/: _bootstrap.py  _halfblock.py  agent.py  agent_session.py  bench.py  bench_live.py  boids.py  breakout.py  canvas.py  chat.py  clock.py  counter.py  counter_program.py  dashboard.py  deploy.py  doom_fire.py  dsl.py  fluid.py  form.py  fps.py  gravity.py  hacker.py  hello.py  ide.py  inline_progress.py  life.py  live_spinner.py  login.py  mandelbrot.py  markup.py  matrix.py  maze.py  messenger.py  mouse.py  music.py  paint.py  particles.py  plasma.py  raymarch.py  scroll.py  (+18 more)
scripts/: check_golden.py  cibw_before_all.sh  golden_snapshot.py
src/: _maya.cpp  _program.cpp  _pyevent.hpp  _widgets.cpp
src/maya_py/: __init__.py  __main__.py  _maya.pyi  easy.py  pixels.py  program.py  py.typed  widgets.py
tests/: golden.txt  test_basic.py  test_compat_repaint.py  test_easy.py  test_mouse.py  test_pilot.py  test_power.py  test_program.py  test_program_pty.py  test_robustness.py  test_scroll.py  test_widgets.py
