[build-system]
requires = ["scikit-build-core>=0.10", "pybind11>=2.12"]
build-backend = "scikit_build_core.build"

[project]
name = "maya-py"
version = "0.1.3"
description = "Python bindings for the maya C++26 TUI framework"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "maya-py" }]
keywords = ["tui", "terminal", "ui", "ncurses", "flexbox", "maya"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: C++",
    "Environment :: Console",
    "Topic :: Software Development :: User Interfaces",
    "Topic :: Terminals",
]

[project.urls]
Homepage = "https://github.com/1ay1/maya-py"
Repository = "https://github.com/1ay1/maya-py"
Documentation = "https://github.com/1ay1/maya-py/blob/master/docs/index.md"
Issues = "https://github.com/1ay1/maya-py/issues"
"maya (upstream)" = "https://github.com/1ay1/maya"

[tool.scikit-build]
minimum-version = "0.10"
build-dir = "build/{wheel_tag}"
wheel.packages = ["src/maya_py"]

[tool.scikit-build.cmake]
version = ">=3.28"

[tool.scikit-build.cmake.define]
MAYA_NATIVE_TUNING = "OFF"
MAYA_PY_STATIC_CXX = "ON"

# ============================================================================
# cibuildwheel — produce STANDALONE binary wheels
# ============================================================================
# These wheels are precompiled: installing one runs NO compiler on the user's
# machine, so an ancient system toolchain is irrelevant. Two things make the
# wheel portable:
#   1. Built inside the manylinux_2_28 container → targets glibc 2.28 (2019),
#      so it runs on distros that old or newer. auditwheel stamps the tag.
#   2. MAYA_PY_STATIC_CXX=ON statically links libstdc++/libgcc → the .so does
#      not need the host's (old) C++ runtime.
# maya needs C++26 (GCC 15), which manylinux doesn't ship, so CIBW_BEFORE_ALL
# bootstraps a modern GCC inside the container before building.
[tool.cibuildwheel]
build-frontend = "build"
# Skip targets we can't realistically build maya on (32-bit, musl, PyPy).
skip = ["*-musllinux*", "pp*", "*_i686", "*-win32"]
test-command = "python -c \"import maya_py; print(maya_py.to_string(maya_py.card('ok'), 20))\""

[tool.cibuildwheel.linux]
# Use the glibc-2.28 image; the .so will demand at most that glibc.
manylinux-x86_64-image = "manylinux_2_28"
manylinux-aarch64-image = "manylinux_2_28"
# Install a C++26-capable GCC inside the build container. gcc-toolset-14 is
# the newest RH toolset; if maya needs strictly GCC 15, set MAYA_PY_GCC_BUILD=1
# to compile it from source (slow). See scripts/cibw_before_all.sh.
before-all = "bash scripts/cibw_before_all.sh"
environment = { CC = "gcc", CXX = "g++" }
