[build-system]
requires = ["scikit-build-core>=0.10", "pybind11>=2.12"]
build-backend = "scikit_build_core.build"

[project]
name = "maya-py"
version = "0.1.5"
description = "Python bindings for the maya C++26 TUI framework"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "maya-py" }]
keywords = ["tui", "terminal", "ui", "ncurses", "flexbox", "maya"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: C++",
    "Environment :: Console",
    "Topic :: Software Development :: User Interfaces",
    "Topic :: Terminals",
]

[project.urls]
Homepage = "https://github.com/1ay1/maya-py"
Repository = "https://github.com/1ay1/maya-py"
Documentation = "https://github.com/1ay1/maya-py/blob/master/docs/index.md"
Issues = "https://github.com/1ay1/maya-py/issues"
"maya (upstream)" = "https://github.com/1ay1/maya"

[tool.scikit-build]
minimum-version = "0.10"
build-dir = "build/{wheel_tag}"
wheel.packages = ["src/maya_py"]
# maya is pulled in via add_subdirectory, so its own install() rules (headers,
# libmaya.a, cmake export files) would otherwise be packaged into the wheel
# root. End users only need the maya_py/ Python package + the self-contained
# _maya extension; drop the C++ build artifacts so the wheel stays lean.
wheel.exclude = ["include/**", "lib/**"]

[tool.scikit-build.cmake]
version = ">=3.28"

[tool.scikit-build.cmake.define]
MAYA_NATIVE_TUNING = "OFF"
MAYA_PY_STATIC_CXX = "ON"

# ============================================================================
# cibuildwheel — produce STANDALONE binary wheels
# ============================================================================
# These wheels are precompiled: installing one runs NO compiler on the user's
# machine, so an ancient system toolchain is irrelevant. Two things make the
# wheel portable:
#   1. Built inside the manylinux_2_28 container → targets glibc 2.28 (2019),
#      so it runs on distros that old or newer. auditwheel stamps the tag.
#   2. MAYA_PY_STATIC_CXX=ON statically links libstdc++/libgcc → the .so does
#      not need the host's (old) C++ runtime.
# maya needs C++26 (GCC 15), which manylinux doesn't ship, so CIBW_BEFORE_ALL
# bootstraps a modern GCC inside the container before building.
[tool.cibuildwheel]
build-frontend = "build"
# Skip targets we can't realistically build maya on (32-bit, musl). PyPy and
# win32 aren't enabled in the first place, so listing them as skips just emits
# a cibuildwheel "selector matches a group that wasn't enabled" warning.
skip = ["*-musllinux*", "*_i686"]
# Smoke test the installed wheel. We must NOT print the rendered box-drawing
# output directly: Windows' default console codec is cp1252, which can't encode
# │╭╰ etc. and raises UnicodeEncodeError. Assert the render produced a
# non-empty string and print only ASCII.
test-command = "python -c \"import maya_py; s = maya_py.to_string(maya_py.card('ok'), 20); assert isinstance(s, str) and s.strip(); print('maya_py import + render OK', len(s), 'chars')\""

[tool.cibuildwheel.linux]
# Use the glibc-2.28 image; the .so will demand at most that glibc.
manylinux-x86_64-image = "manylinux_2_28"
manylinux-aarch64-image = "manylinux_2_28"
# Install a C++26-capable GCC inside the build container. gcc-toolset-14 is
# the newest RH toolset; if maya needs strictly GCC 15, set MAYA_PY_GCC_BUILD=1
# to compile it from source (slow). See scripts/cibw_before_all.sh.
before-all = "bash scripts/cibw_before_all.sh"
environment = { CC = "gcc", CXX = "g++" }

# ── macOS ────────────────────────────────────────────────────────────
# maya is C++26 and is built with Homebrew GCC on macOS, NOT AppleClang
# (CMakeLists hard-rejects AppleClang — it misses the library bits maya
# needs). before-all installs GCC via Homebrew; the env points CC/CXX at the
# versioned driver so CMake's compiler probe picks GCC.
#
# Homebrew GCC is single-arch, so we build a NATIVE wheel per runner (arm64 on
# macos-14, x86_64 on a macos-13 runner) rather than a universal2 fat binary —
# GCC can't emit universal2. Run the matrix on both runner archs to cover Intel
# + Apple Silicon. MAYA_PY_STATIC_CXX bakes libstdc++/libgcc into the .so so the
# wheel doesn't chase the builder's Homebrew libstdc++ at load time; delocate
# vendors any remaining dylibs.
[tool.cibuildwheel.macos]
before-all = "brew install gcc || true"
environment = { MACOSX_DEPLOYMENT_TARGET = "11.0", CC = "gcc-15", CXX = "g++-15", MAYA_PY_STATIC_CXX = "ON" }

# ── Windows ────────────────────────────────────────────────────────
# The GitHub windows-2022 runner ships VS 2022 (cl >= 19.40), which compiles
# maya's C++23. The .pyd links the UCRT, present on every Windows 10+ box, so
# the wheel is standalone. delvewheel (run via repair) vendors any extra DLLs.
[tool.cibuildwheel.windows]
archs = ["AMD64"]
before-build = "pip install delvewheel"
repair-wheel-command = "delvewheel repair -w {dest_dir} {wheel}"
